Add include file config method
Plus more detailed usage steps